--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     text-align: center;
     align-items: center
   }
+  .cell.gray {
+    background: lightgrey
+  }
 </style>
 <body>
   <div class="input">
@@ -39,6 +42,7 @@
   <input id='year' />
   <button onclick="onSelectMonth()" >Submit</button>
   </div>
+  <h2 id='title'></h2>
   <section class="container" id="container">
     
   </section>
